update some demo